<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#FFFFFF"
    android:padding="30dp"
    tools:context=".Activities.MailVerification">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/text_reach_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_margin="4dp"
        android:text="@string/Nice_Message"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_Email_Verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_reach_out"
        android:layout_margin="4dp"
        android:text="@string/email_verification"/>
    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:gravity="center"
        android:layout_below="@+id/text_Email_Verification"/>

    <TextView
        android:id="@+id/resend_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/text_description"
        android:text="@string/resend"/>


    <TextView
        android:id="@+id/register_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:text="@string/register_again"/>






</RelativeLayout>