<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="30dp">

        <RelativeLayout

            android:id="@+id/login_root_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rounded_corner"
            android:padding="20dp">


            <TextView
                android:id="@+id/text_LOGIN"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333232"
                android:textSize="23.3sp" />


            <TextView
                android:id="@+id/text_Email"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_LOGIN"
                android:layout_marginTop="16dp"
                android:textColor="#9e9d9d"
                android:textSize="12.3sp" />

            <EditText
                android:id="@+id/email_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_Email"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#333232"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/email_in"
                android:layout_marginTop="4dp"
                android:background="#9e9e9e" />


            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider_1"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                android:textColor="#9e9d9d"
                android:textSize="12.3sp" />


            <LinearLayout
                android:id="@+id/password_edit_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_password"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pwd_in"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#333232" />

                <ImageButton
                    android:id="@+id/password_toggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:background="@drawable/ic_baseline_visibility_off_24" />


            </LinearLayout>

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/password_edit_text_container"
                android:layout_marginTop="4dp"
                android:background="#9e9e9e" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider_2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/forgot"
                android:textColor="#38b5f2"
                android:textSize="13.3sp" />

            <CheckBox
                android:id="@+id/remember_me_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="7dp"
                android:text="@string/checkbox_Remember"
                android:textColor="#333232" />
            <View
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/remember_me_box"
                android:layout_marginTop="4dp"
                android:background="#9e9e9e" />



            <ImageView
                android:id="@+id/sign_in"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                android:background="@drawable/arrow_bg"
                android:layout_below="@id/divider_3"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"/>



        </RelativeLayout>
    </ScrollView>


    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />


</RelativeLayout>